# KULIM

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.en.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: wheel.yml
grammar/: README.en.md  README.md  pyproject.toml
grammar/rust/: Cargo.toml
grammar/rust/src/: lib.rs
grammar/src/grammar/: __init__.py  analyzer.py  bio_helper.py  cache.py  cli.py  conjugation.py  conllu.py  constraints.py  dataset.py  dictionary.py  dp_analyzer.py  exceptions.py  gpu.py  hmm_trainer.py  irregular.py  kg_format.py  logger.py  model.py  model_packager.py  morph.py  neural_trainer.py  neural_wrapper.py  pos_tags.py  preprocessor.py  rust_ext.py  scorers.py  sejong_dictionary.py  stemmer.py  syntax.py  trie.py  trie_da.py  utils.py
hangul/: README.en.md  README.md  pyproject.toml
hangul/src/hangul/: __init__.py  hangul.py
kulim/: pyproject.toml
model/: release_model.kg
pronunciation/: README.en.md  README.md  pyproject.toml
pronunciation/src/pronunciation/: __init__.py  engine.py  pronunciation.py
pronunciation/src/pronunciation/rules/: assimilation.py  base.py  effect.py  syllable.py
romanization/: README.en.md  README.md  pyproject.toml
romanization/src/romanization/: __init__.py  romanization.py
tests/: test_classification.py  test_extensions.py  test_gpu.py  test_hangul_extended.py  test_morph.py  test_pronunciation.py  test_romanization.py  test_syntax.py
