[package]
name = "kulim_rust"
version = "0.1.0-rc.2"
edition = "2021"
license = "CC-BY-SA-4.0"

[lib]
name = "kulim_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
